Fixed nav scrollbar

--- a/public/styles/scopes/console.less
+++ b/public/styles/scopes/console.less
@@ -198,8 +198,7 @@
 
       .container {
         overflow: auto;
-        height: ~"calc(100% - 183px)";
-        padding-bottom: 50px;
+        height: ~"calc(100% - 133px)";
         width: 100%;
       }
 
